--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@tailwindcss/typography": "^0.5.16",
-    "@tailwindcss/vite": "^4.1.7",
-    "astro": "^5.7.14",
+    "@tailwindcss/vite": "^4.1.10",
+    "astro": "^5.10.0",
     "date-fns": "^4.1.0",
-    "shiki": "^3.4.2",
-    "string-similarity": "^4.0.4",
+    "shiki": "^3.7.0",
+    "string-similarity-js": "^2.1.4",
     "typescript": "^5.8.3"
   },
   "packageManager": "pnpm@10.6.5+sha1.da220e966c2db3275efb5928cf8f3592681b106b",
   "devDependencies": {
-    "@astrojs/mdx": "^4.2.6",
-    "tailwindcss": "^4.1.7",
-    "tsx": "^4.20.2"
+    "@astrojs/mdx": "^4.3.0",
+    "tailwindcss": "^4.1.10",
+    "tsx": "^4.20.3"
   }
 }
